--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
+    "moment": "^2.24.0",
     "node-telegram-bot-api": "^0.40.0",
     "nodemon": "^1.19.4"
   }
