--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "node-telegram-bot-api": "^0.40.0",
     "nodemon": "^1.19.4"
   }
